升级gradle，修正依赖配置

--- a/DynamicLoadApk/local.properties
+++ b/DynamicLoadApk/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 05 16:29:55 CST 2015
-sdk.dir=D\:\\adt-bundle-windows-x86_64-20130219\\sdk
+#Fri May 25 15:12:29 CST 2018
+ndk.dir=D\:\\Applications\\Android\\sdk\\ndk-bundle
+sdk.dir=D\:\\Applications\\Android\\sdk
