--- a/DynamicLoadApk/build.gradle
+++ b/DynamicLoadApk/build.gradle
@@ -3,32 +3,41 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:2.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-def dlPath = '/sdcard/DynamicLoadHost'
+def dlPath = '/sdcard/mysoft'
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
-    def upload = { ->
+    def adb = "$System.env.ANDROID_HOME\\platform-tools\\adb.exe"
+    def upload = {
         try {
             exec {
-                commandLine android.adbExe, 'shell', 'mkdir', dlPath
+                commandLine "$adb", 'shell', 'mkdir', dlPath
             }
         }
         catch (ignored) {
         }
 
         exec {
-            commandLine android.adbExe, 'push', project.name + '-debug.apk', dlPath
+            commandLine "adb", 'push', project.name + '-debug.apk', dlPath
             workingDir project.projectDir.toString() + '/build/outputs/apk/'
         }
 
@@ -38,7 +47,22 @@ allprojects {
         upload()
     }
 
-    task buildLib (type: Jar, dependsOn:'compileReleaseJava') {
-        from (project.buildDir.toString()+'/intermediates/classes/release')
+//    task execUploadApk << {
+//        println uploadApk.output
+//    }
+
+//    task uploadApk(type: Exec) { arg ->
+//        workingDir arg.project.projectDir.toString() + '/build/outputs/apk/'
+//        println 'look the uploadApk' + workingDir
+////        commandLine "$adb", 'shell', 'ls', '/sdcard/mysoft'
+//        commandLine "$adb", 'push', arg.project.name + '-debug.apk', dlPath
+//        standardOutput = new ByteArrayOutputStream()
+//        ext.output = {
+//            return standardOutput.toString()
+//        }
+//    }
+
+    task buildLib(type: Jar, dependsOn: 'compileDebugJavaWithJavac') {
+        from(project.buildDir.toString() + '/intermediates/classes/debug')
     }
 }
