--- a/DynamicLoadApk/sample/depend_on_interface/doi-common/build.gradle
+++ b/DynamicLoadApk/sample/depend_on_interface/doi-common/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 8
@@ -33,5 +33,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    provided fileTree(dir: 'libs', include: ['*.jar'])
 }
