--- a/DynamicLoadApk/sample/depend_on_interface/doi-host/build.gradle
+++ b/DynamicLoadApk/sample/depend_on_interface/doi-host/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 8
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    provided fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':lib')
     compile project(':doi-common')
 }
